samples/_failures_safe/1761357563_773617_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1bf0d016.c: In function ‘free_graph’:
./samples/SAFE/__tmp_1bf0d016.c:164:5: error: expected expression at end of input
  164 |     if (graph ==
      |     ^~
./samples/SAFE/__tmp_1bf0d016.c:164:5: error: expected declaration or statement at end of input
